--- a/metadata.yaml
+++ b/metadata.yaml
@@ -19,6 +19,8 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Kentucky''s Famous Feuds and Tragedies
 
   Authentic History of the World Renowned Vendettas of the
